# Game-of-life-CUDA

./: .gitignore
src/: CMakeLists.txt  out.txt
src/CudaLife/include/: Benchmark.h  CpuLife.h  CudaLifeFunctions.h  GpuLife.h  OpenGlCudaHelper.h
src/CudaLife/src/: CudaLife.cu
src/CudaLifeGui/src/: main.cpp
src/CudaLifeTests/include/: LifeTests.h
src/CudaLifeTests/src/: BenchmarkTests.cpp  CpuLifeTests.cpp  GpuLifeTests.cpp  main.cpp
